Styled profile page: made edit and delete buttons into drop downs on post and fixed aligning, styled buttons

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -120,6 +120,9 @@ img {
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
 .postimage img {
@@ -180,13 +183,19 @@ img {
 .profileContainer {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    width: 100%;
+}
+
+.profileDetails {
+    display: flex;
+    margin-top: 30px;
+    margin-bottom: 30px;
     margin-left: 200px;
 }
 
-.profileWrapper {
-    display: flex;
-    margin-top: 30px;
+.yourPostsContainer {
+    margin: auto;
+    border-top: 1px solid #ccc;
 }
 
 .pfpContainer img {
@@ -194,6 +203,85 @@ img {
     height: 150px;
     border-radius: 100px;
     margin-right: 60px;
+}
+
+.editProfileButton {
+    font-weight: bold;
+    margin-left: 20px;
+    text-decoration: none;
+    color: black;
+    background-color: rgb(209, 209, 209);
+    padding: 5px 10px;
+    border-radius: 30px;
+}
+
+.postActions {
+    position: absolute;
+    display: flex;
+    text-align: center;
+    right: 10px;
+    align-items: center;
+    justify-content: center;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropbtn {
+    background-color: transparent;
+    font-weight: bold;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+    padding: 0;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 120px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content button {
+    width: 100%;
+    height: 100%;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    background: none;
+    border: none;
+    color: inherit;
+    font: inherit;
+    margin-bottom: -16px;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown-content button:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown-content {
+    right: 0;
 }
 
 /* ======================================== Admin Page ===============================================*/
